--- a/examples/train_lora/llama3_lora_ppo.yaml
+++ b/examples/train_lora/llama3_lora_ppo.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: meta-llama/Meta-Llama-3-8B-Instruct
+model_name_or_path: Qwen/Qwen2.5-1.5B-Instruct
 reward_model: saves/llama3-8b/lora/reward
 trust_remote_code: true
 
@@ -12,7 +12,7 @@ lora_target: all
 
 ### dataset
 dataset: identity,alpaca_en_demo
-template: llama3
+template: qwen
 cutoff_len: 2048
 max_samples: 1000
 overwrite_cache: true
