--- a/examples/train_lora/qwen2_5_lora_grpo.yaml
+++ b/examples/train_lora/qwen2_5_lora_grpo.yaml
@@ -3,14 +3,15 @@ model_name_or_path: Qwen/Qwen2.5-1.5B-Instruct
 trust_remote_code: true
 
 ### method
-stage: rm
+stage: grpo
 do_train: true
 finetuning_type: lora
 lora_rank: 8
 lora_target: all
+reward_funcs: [accuracy, format, reasoning_steps, consine]
 
 ### dataset
-dataset: dpo_en_demo
+dataset: identity,alpaca_en_demo
 template: qwen
 cutoff_len: 2048
 max_samples: 1000
@@ -18,7 +19,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/llama3-8b/lora/reward
+output_dir: saves/qwen2_5-1.5b/lora/grpo
 logging_steps: 10
 save_steps: 500
 plot_loss: true
@@ -27,15 +28,14 @@ overwrite_output_dir: true
 ### train
 per_device_train_batch_size: 1
 gradient_accumulation_steps: 8
-learning_rate: 1.0e-4
-num_train_epochs: 1
+learning_rate: 1.0e-5
+num_train_epochs: 3.0
 lr_scheduler_type: cosine
 warmup_ratio: 0.1
 bf16: true
 ddp_timeout: 180000000
 
-### eval
-# val_size: 0.1
-# per_device_eval_batch_size: 1
-# eval_strategy: steps
-# eval_steps: 500
+### generate
+max_new_tokens: 512
+top_k: 0
+top_p: 0.9
